--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
     <a class="navbar-brand" href="#">Lovelink</a>
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+
+    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
       <li class="nav-item">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -11,12 +12,27 @@
       <li class="nav-item">
         <a class="nav-link">Messages</a>
       </li>
+      <li class="nav-item" (click)="logout()">
+        <a class="nav-link">Logout</a>
+      </li>
     </ul>
+
+    <div class="dropdown" *ngIf="loggedIn" dropdown>
+      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle
+        >Welcome user</a
+      >
+      <div class="dropdown-menu" *dropdownMenu>
+        <a class="dropdown-item">Edit profile</a>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
+      </div>
+    </div>
+
     <form
       #loginForm="ngForm"
       class="d-flex"
       (ngSubmit)="login()"
-      autocomplete="off"
+      autocomplete="on"
+      *ngIf="!loggedIn"
     >
       <input
         name="username"
