--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<div class="container mt-5">
+  <div class="text-center" *ngIf="!registerMode">
+    <h1>Find your match</h1>
+    <p class="lead">
+      Come on in to view your matches... all you need is signup!
+    </p>
+    <div class="text-center">
+      <button
+        class="btn btn-primary btn-lg me-2"
+        (click)="toggleRegisterMode()"
+      >
+        Register
+      </button>
+      <button class="btn btn-primary btn-lg btn-info">Learn more</button>
+    </div>
+  </div>
+
+  <div class="container" *ngIf="registerMode">
+    <div class="row justify-content-center">
+      <div class="col-4">
+        <p>Register form go here</p>
+      </div>
+    </div>
+  </div>
+</div>
