--- a/client/src/app/_members/member-card/member-card.component.html
+++ b/client/src/app/_members/member-card/member-card.component.html
@@ -7,7 +7,10 @@
     />
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
-        <button class="btn btn-primary py-1 px-2">
+        <button
+          class="btn btn-primary py-1 px-2"
+          routerLink="/members/{{ member.userName }}"
+        >
           <i class="fa fa-user"></i>
         </button>
       </li>
