--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -2,7 +2,7 @@
   <div class="col-4">
     <div class="card">
       <img
-        src="{{ member.photoUrl || './assets/user.png' }}"
+        src="{{ member.photoUrl || '../../../../../assets/user.png' }}"
         alt="{{ member.knownAs }}"
         class="card-img-top img-thumbnail"
       />
@@ -46,7 +46,11 @@
         <p>{{ member.interests }}</p>
       </tab>
       <tab heading="Photos">
-        <p>Photos will go here</p>
+        <ngx-gallery
+          [options]="galleryOptions"
+          [images]="galleryImages"
+          class="ngx-gallery"
+        ></ngx-gallery>
       </tab>
       <tab heading="Messages">
         <p>Messages will go here</p>
