--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -3,7 +3,7 @@
     <h1>Your profile</h1>
   </div>
   <div class="col-8">
-    <div class="alert alert-info">
+    <div class="alert alert-info" *ngIf="editForm.dirty">
       <p>
         <strong>Information: </strong>You have made changes. Any unsaved changes
         will be lost.
@@ -36,7 +36,14 @@
         </div>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success col-12">Save changes</button>
+        <button
+          class="btn btn-success col-12"
+          type="submit"
+          form="editForm"
+          [disabled]="!editForm.dirty"
+        >
+          Save changes
+        </button>
       </div>
     </div>
   </div>
@@ -44,7 +51,12 @@
   <div class="col-8">
     <tabset class="member-tabset">
       <tab heading="About {{ member.knownAs }}">
-        <form class="mb-4">
+        <form
+          class="mb-4"
+          #editForm="ngForm"
+          id="editForm"
+          (ngSubmit)="updateMember()"
+        >
           <h4>Description</h4>
           <textarea
             class="form-control"
