--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -2,8 +2,17 @@
   <div class="col-2 mb-1" *ngFor="let photo of member.photos">
     <img src="{{ photo.url }}" alt="photo of user" class="img-thumbnail mb-1" />
     <div class="text-center">
-      <button class="btn btn-sm">Main</button>
-      <button class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+      <button
+        class="btn btn-sm mx-1"
+        [disabled]="photo.isMain"
+        (click)="setMainPhoto(photo)"
+        [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'"
+      >
+        Main
+      </button>
+      <button class="btn btn-sm btn-danger mx-1">
+        <i class="fa fa-trash"></i>
+      </button>
     </div>
   </div>
 </div>
