--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -36,7 +36,7 @@
       <a
         class="dropdown-toggle text-light text-decoration-none ms-1"
         dropdownToggle
-        >Welcome {{ user.username | titlecase }}</a
+        >Welcome {{ user.knownAs | titlecase }}</a
       >
       <div class="dropdown-menu" *dropdownMenu>
         <a class="dropdown-item" routerLink="/member/edit">Edit profile</a>
