--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -49,6 +49,31 @@
     <button (click)="resetFilter()" class="btn btn-info ms-1" type="submit">
       Reset Filters
     </button>
+
+    <div class="col">
+      <div class="btn-group float-end">
+        <button
+          class="btn btn-primary"
+          type="button"
+          name="orderBy"
+          [(ngModel)]="userParams.orderBy"
+          btnRadio="lastActive"
+          (click)="loadMembers()"
+        >
+          Last Active
+        </button>
+        <button
+          class="btn btn-primary"
+          type="button"
+          name="orderBy"
+          [(ngModel)]="userParams.orderBy"
+          btnRadio="created"
+          (click)="loadMembers()"
+        >
+          Newest members
+        </button>
+      </div>
+    </div>
   </form>
 </div>
 
