--- a/client/src/app/_members/member-card/member-card.component.html
+++ b/client/src/app/_members/member-card/member-card.component.html
@@ -15,7 +15,7 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary py-1 px-2">
+        <button class="btn btn-primary py-1 px-2" (click)="addLike(member)">
           <i class="fa fa-heart"></i>
         </button>
       </li>
