--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -1,1 +1,34 @@
-<p>lists works!</p>
+<div class="text-center mt-3">
+  <h2>
+    {{ predicate === "Liked" ? "Members I liked" : "Members who likes me" }}
+  </h2>
+</div>
+
+<div class="container mt-3">
+  <div class="d-flex">
+    <div class="btn-group" name="predicate">
+      <button
+        class="btn btn-primary"
+        btnRadio="liked"
+        [(ngModel)]="predicate"
+        (click)="loadLikes()"
+      >
+        Members I like
+      </button>
+      <button
+        class="btn btn-primary"
+        btnRadio="likedBy"
+        [(ngModel)]="predicate"
+        (click)="loadLikes()"
+      >
+        Members likes me
+      </button>
+    </div>
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-2" *ngFor="let member of members">
+      <app-member-card [member]="member"></app-member-card>
+    </div>
+  </div>
+</div>
