--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -20,7 +20,7 @@
             <div class="header">
               <small class="text-muted">
                 <span class="fa fa-clock-o">{{
-                  message.messageSent | timeago
+                  message.messageSent + "Z" | timeago
                 }}</span>
                 <span
                   class="text-danger"
@@ -34,7 +34,7 @@
                   *ngIf="
                     message.dateRead && message.senderUsername !== username
                   "
-                  >(read {{ message.dateRead | timeago }})</span
+                  >(read {{ message.dateRead + "Z" | timeago }})</span
                 >
               </small>
             </div>
